--- a/src/components/robobo/robobo-monitor-wrapper/robobo-monitor-wrapper.css
+++ b/src/components/robobo/robobo-monitor-wrapper/robobo-monitor-wrapper.css
@@ -7,5 +7,30 @@
 
 .stage-canvas-wrapper {
     /* Hides negative space between edge of rounded corners + container, when selected */
-    user-select: none;
+    user-select: none;   
+}
+
+.mydiv {
+    display: block;
+/*    
+    border-radius: 0.5rem;
+    border: 0.0625rem solid hsla(0, 0%, 0%, 0.15);
+*/    
+    position: absolute;
+    top: 95px;
+    right: 5px;
+    left: calc(100% - 245px);
+    height: calc(100% - 95px);
+    width: 240px;
+    -webkit-box-sizing: content-box !important;
+    box-sizing: content-box !important;   
+}
+
+
+.robobo-iframe {
+    width: 99%;
+    height: 99%;
+    display: block;
+    margin: 0px;
+    border: 0;
 }
