Some improvements in the style of the robobo monitor

--- a/static/robobo-monitor/css/main.css
+++ b/static/robobo-monitor/css/main.css
@@ -11,7 +11,7 @@
 html {
   overflow-y: scroll;
   overflow-x: hidden;
-  background: #fff;
+  background: #f9f9f9; /*#fff;*/
 }
 html.dragging body {
   -moz-user-select: none;
