--- a/src/components/robobo/robobo-monitor-wrapper/robobo-monitor-wrapper.css
+++ b/src/components/robobo/robobo-monitor-wrapper/robobo-monitor-wrapper.css
@@ -15,22 +15,27 @@
 /*    
     border-radius: 0.5rem;
     border: 0.0625rem solid hsla(0, 0%, 0%, 0.15);
-*/    
+*/  
+    
     position: absolute;
-    top: 95px;
-    right: 5px;
+    top: 92px;
+    right: 7px;
+    bottom: 0px;
     left: calc(100% - 245px);
-    height: calc(100% - 95px);
-    width: 240px;
+    /*height: calc(100% - 95px);*/
+    /*width: 240px;*/
+    margin: 0px;
     -webkit-box-sizing: content-box !important;
     box-sizing: content-box !important;   
 }
 
 
 .robobo-iframe {
-    width: 99%;
-    height: 99%;
+    width: 100%;
+    height: 100%;
     display: block;
     margin: 0px;
-    border: 0;
+    border: 0.0625rem solid hsla(0, 0%, 0%, 0.15);
+    border-radius: 0.5rem 0.5rem 0 0;
+    /* border-radius: 10px 10px 0 0; */
 }
